[package]
name = "ejf-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freetype-rs = "0.31.0"
viuer = "0.6"
image = "0.24.4"
indicatif = "0.17.1"
quick-xml = "0.23.0"
binstall-zip = { version = "0.6.3", default-features = false }
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
